added icon, spacing

--- a/fleet.html
+++ b/fleet.html
@@ -20,7 +20,7 @@
     <script src="assets/js/custom.js"></script>
 
 </head>
-<body class="about solution fleet">
+<body class="solution fleet">
 	<header>
         <div class="header-innerwrapper">
             <div class="logo col-md-4  col-sm-4 col-xs-2">
