--- a/fleet.html
+++ b/fleet.html
@@ -201,7 +201,7 @@
     </div>
 
     <div class="solutions btmc">
-        <div class="container">
+        <div class="container" style="padding: 0 0 40px 0">
             <h3>Ready to electrify your fleet?</h3>
 
             <div class="btns">
