image path corrected

--- a/best-ways-to-charge.html
+++ b/best-ways-to-charge.html
@@ -68,7 +68,7 @@
         <div class="container item-wrapper">
             <div class="items">
                 <div class="img-wrapper col-md-4 col-sm-4 col-xs-12">
-                    <img src="assets/images/handplugin.png" />
+                    <img src="assets/images/BWC/bwc1.png" />
                 </div>
                 <div class="htext col-md-8 col-sm-8 col-xs-12">
                     <h4>Plug in Connector</h4>
@@ -86,13 +86,13 @@
                     </p>
                 </div>
                 <div class="img-wrapper col-md-4 col-sm-4 col-xs-12">
-                    <img src="assets/images/swipe.png" />
+                    <img src="assets/images/BWC/bwc2.png" />
                 </div>
             </div>
 
             <div class="items">
                 <div class="img-wrapper col-md-4 col-sm-4 col-xs-12">
-                    <img src="assets/images/reliable.png" />
+                    <img src="assets/images/BWC/bwc3.png" />
                 </div>
                 <div class="htext col-md-8 col-sm-8 col-xs-12">
                     <h4>Charged!!! Ready to Go</h4>
@@ -106,7 +106,7 @@
 
     <div class="btm-img">
         <div class="container">
-            <img src="assets/images/30mint.jpg" />
+            <img src="assets/images/BWC/bwc4.jpg" />
         </div>
     </div>
 
@@ -125,7 +125,7 @@
 
     <div class="btm-img">
         <div class="container">
-            <img src="assets/images/websitepage.png" />
+            <img src="assets/images/BWC/bwc5.png" />
         </div>
     </div>
 </div>
