--- a/charging-basics-1.html
+++ b/charging-basics-1.html
@@ -75,7 +75,7 @@
             <hr>
             <div class="items">
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/corporate.png" />
+                    <img src="assets/images/CHBS/chbs1.png" />
                 </div>
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Charging</h4>
@@ -93,13 +93,13 @@
                     </p>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/tchrg.jpg" />
+                    <img src="assets/images/CHBS/chbs2.jpg" />
                 </div>
             </div>
 
             <div class="items">
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/co2.jpg" />
+                    <img src="assets/images/CHBS/chbs3.jpg" />
                 </div>
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>EV's are EcoFriendly</h4>
@@ -117,7 +117,7 @@
                     </p>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/pric.jpg" />
+                    <img src="assets/images/CHBS/chbs4.jpg" />
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
             <hr>
             <div class="btm-img">
                 <div class="container">
-                    <img src="assets/images/3t.jpg" />
+                    <img src="assets/images/CHBS/chbs5.jpg" />
                 </div>
             </div>
     </div>
