--- a/fleet.html
+++ b/fleet.html
@@ -77,44 +77,44 @@
 				<div class="owl-carousel owl-main-carousel">
 
 					  <div class="owl-feat-item">
-						  <img src="assets/images/sdg7.png" />
+						  <img src="assets/images/Fleet/flt1.png" />
 						  <div class="slidecaption">
-							  <div class="slide-title">Clean Energy</div>
+							  <div class="slide-title">Bus / Truck</div>
 						  </div>
 					  </div>
 
 					  <div class="owl-feat-item">
-						  <img src="assets/images/sdg8.png" />
+						  <img src="assets/images/Fleet/flt2.png" />
 						  <div class="slidecaption">
-							  <div class="slide-title">Economic Growth</div>
+							  <div class="slide-title">Cab / Taxi</div>
 						  </div>
 					  </div>
 
 					  <div class="owl-feat-item">
-						  <img src="assets/images/sdg9.png" />
+						  <img src="assets/images/Fleet/flt3.png" />
 						  <div class="slidecaption">
-							  <div class="slide-title">Innovative Infrastructure</div>
+							  <div class="slide-title">Corporate Fleet</div>
 						  </div>
 					  </div>
 
 					  <div class="owl-feat-item">
-						  <img src="assets/images/sdg11.png" />
+						  <img src="assets/images/Fleet/flt4.png" />
 						  <div class="slidecaption">
-							  <div class="slide-title">Sustainable Cities</div>
+							  <div class="slide-title">Delivery Vans</div>
 						  </div>
 					  </div>
 
 					  <div class="owl-feat-item">
-						  <img src="assets/images/sdg13.png" />
+						  <img src="assets/images/Fleet/flt5.png" />
 						  <div class="slidecaption">
-							  <div class="slide-title">Climate Action</div>
+							  <div class="slide-title">Government</div>
 						  </div>
 					  </div>
 
 					  <div class="owl-feat-item">
-						  <img src="assets/images/sdg15.png" />
+						  <img src="assets/images/Fleet/flt6.png" />
 						  <div class="slidecaption">
-							  <div class="slide-title">Life on Land</div>
+							  <div class="slide-title">Ride Share</div>
 						  </div>
 					  </div>
 			</div>
@@ -129,7 +129,7 @@
             <h4>Electric Fleet Charging Solution</h4>
             <hr>
             <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                <img src="assets/images/elec.jpg" />
+                <img src="assets/images/Fleet/flt7.jpg" />
             </div>
             <div class="htext col-md-6 col-sm-6 col-xs-12">
                 <p class="hinfo">
@@ -145,7 +145,7 @@
             <hr>
             <div class="items">
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/flleet1.jpg" />
+                    <img src="assets/images/Fleet/flt8.jpg" />
                 </div>
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Personal Charging</h4>
@@ -167,13 +167,13 @@
                     </ul>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/flleet2.jpg" />
+                    <img src="assets/images/Fleet/flt9.jpg" />
                 </div>
             </div>
 
             <div class="items">
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/flleet3.jpg" />
+                    <img src="assets/images/Fleet/flt10.jpg" />
                 </div>
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Depot Charging</h4>
@@ -194,7 +194,7 @@
             <hr>
 
             <div class="btm-img">
-                    <img src="assets/images/cost.jpg" />
+                    <img src="assets/images/Fleet/flt11.jpg" />
             </div>
         </div>
 
