--- a/solution.html
+++ b/solution.html
@@ -67,19 +67,19 @@
             <h3>E-MOBILITY WITH RIMONE</h3>
             <hr>
             <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
-                <img src="assets/images/fleet.jpg" />
+                <img src="assets/images/Solution/solution1.jpg" />
                 <div class="btns">
                     <a href="business.html">PUBLIC</a>
                 </div>
             </div>
             <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
-                <img src="assets/images/corporate.png" />
+                <img src="assets/images/Solution/solution2.png" />
                 <div class="btns">
                     <a href="business.html">COMMERCIAL</a>
                 </div>
             </div>
             <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
-                <img src="assets/images/office.png" />
+                <img src="assets/images/Solution/solution3.png" />
                 <div class="btns">
                     <a href="fleet.html">FLEET</a>
                 </div>
@@ -91,7 +91,7 @@
         <div class="container item-wrapper">
             <div class="items">
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/business.png" />
+                    <img src="assets/images/Solution/solution4.png" />
                 </div>
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Public Charging</h4>
@@ -122,13 +122,13 @@
                     </ul>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/corporates.png" />
+                    <img src="assets/images/Solution/solution5.png" />
                 </div>
             </div>
 
             <div class="items">
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/fleet2.png" />
+                    <img src="assets/images/Solution/solution6.png" />
                 </div>
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Fleet Charging</h4>
@@ -149,7 +149,7 @@
 
     <div class="btm-img">
         <div class="container">
-            <img src="assets/images/websitepage.png" />
+            <img src="assets/images/Solution/solution7.png" />
         </div>
     </div>
 </div>
