--- a/business.html
+++ b/business.html
@@ -70,7 +70,7 @@
             <hr>
             <div class="item-wrapper">
                 <div class="imgcontainer col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/why.jpg" />
+                    <img src="assets/images/Business/bs1.jpg" />
                 </div>
 
                 <div class="imginfo col-md-6 col-sm-6 col-xs-12">
@@ -96,7 +96,7 @@
         <div class="container">
             <h3>Charging Infrastructure with No Operation & Maintenance Cost</h3>
             <hr>
-            <img src="assets/images/cost.jpg" />
+            <img src="assets/images/Business/bs2.jpg" />
         </div>
     </div>
 
@@ -107,7 +107,7 @@
                 RIMONE will manage all the activities from installation to maintenance and best customer service.
             </p>
             <div class="imgcontainer col-md-6 col-sm-6 col-xs-12">
-                <img src="assets/images/cstmr.jpg" />
+                <img src="assets/images/Business/bs3.jpg" />
             </div>
 
             <div class="imginfo col-md-6 col-sm-6 col-xs-12">
@@ -122,7 +122,7 @@
 
     <div class="btm-img">
         <div class="container">
-            <img src="assets/images/websitepagep.png" />
+            <img src="assets/images/Business/bs4.png" />
         </div>
     </div>
 </div>
