--- a/charging-etiquettes.html
+++ b/charging-etiquettes.html
@@ -70,7 +70,7 @@
             </span>
             <div class="items">
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/tips.jpg" />
+                    <img src="assets/images/CHEQ/cheq1.jpg" />
                 </div>
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Tips For Clean Charging Session</h4>
@@ -94,13 +94,13 @@
                     </ul>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/errands.jpg" />
+                    <img src="assets/images/CHEQ/cheq2.jpg" />
                 </div>
             </div>
 
             <div class="items">
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/evn.jpg" />
+                    <img src="assets/images/CHEQ/cheq3.jpg" />
                 </div>
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Charging space is for EV only</h4>
@@ -118,7 +118,7 @@
                     </p>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/evrc.jpg" />
+                    <img src="assets/images/CHEQ/cheq4.jpg" />
                 </div>
             </div>
         </div>
