--- a/about.html
+++ b/about.html
@@ -119,70 +119,70 @@
               <div class="owl-carousel owl-main-carousel">
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg7.png" />
+                      <img src="assets/images/About/sdg7.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Clean Energy</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg8.png" />
+                      <img src="assets/images/About/sdg8.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Economic Growth</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg9.png" />
+                      <img src="assets/images/About/sdg9.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Innovative Infrastructure</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg11.png" />
+                      <img src="assets/images/About/sdg11.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Sustainable Cities</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg13.png" />
+                      <img src="assets/images/About/sdg13.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Climate Action</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg15.png" />
+                      <img src="assets/images/About/sdg15.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Life on Land</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg7.png" />
+                      <img src="assets/images/About/sdg7.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Clean Energy</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg8.png" />
+                      <img src="assets/images/About/sdg8.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Economic Growth</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg9.png" />
+                      <img src="assets/images/About/sdg9.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Innovative Infrastructure</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
-                      <img src="assets/images/sdg11.png" />
+                      <img src="assets/images/About/sdg11.png" />
                       <div class="slidecaption">
                           <div class="slide-title">Sustainable Cities</div>
                       </div>
