--- a/type-of-evs.html
+++ b/type-of-evs.html
@@ -95,7 +95,7 @@
         <div class="container">
             <h3>All Battery Electric Vehicles in India</h3>
             <hr>
-            <img src="assets/images/EVT/evt4.jpg" />
+            <img src="assets/images/EVT/evt4.png" />
         </div>
     </div>
 
