meta tags removed

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Richarge with Rimone - Electric Vehicle Charging Stations | RIMONE</title>
-    <meta name="description" content="Rimone is India's Best Electric Vehicle Charging Network. Creating a nationwide network of Charging Stations so that people can easily charge their EV's and adopt E-mobility."/>
-    <meta name="keywords" content="EV Charging,electric vehicle chargers,charger network,rimone,fast charging,AC charger, DC charger,emobility">
-	<meta name="author" content="Rimone"/>
+    <meta name="description" content="TESTING"/>
+    <meta name="keywords" content="Testing">
+	<meta name="author" content="Testing"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
