--- a/faqs.html
+++ b/faqs.html
@@ -24,7 +24,7 @@
 	<header>
         <div class="header-innerwrapper">
             <div class="logo col-md-4  col-sm-4 col-xs-2">
-                <img src="assets/images/logo.png" />
+                <a href="index.html"><img src="assets/images/logo.png" />
             </div>
 
             <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
@@ -32,7 +32,7 @@
                     <a href="#menu" class="menu-link">&#9776;</a>
                     <nav id="menu" class="panel" role="navigation">
                         <div class="site-identity">
-                            <img src="assets/images/logo.png" />
+                            <a href="index.html"><img src="assets/images/logo.png" />
                         </div>
                         <ul>
                             <li><a href="index.html">Home</a></li>
