email form success

--- a/contact-us.html
+++ b/contact-us.html
@@ -18,6 +18,8 @@
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
     <script src="assets/js/custom.js"></script>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
+	<script src="assets/js/email.js"></script>
 
 </head>
 <body class="contact">
@@ -70,14 +72,14 @@
                   <span>Let us help You!!!</span>
                   <div class="form">
 
-                      <form aria-live="polite" data-ux="Form" class="">
-                          <input type="text" placeholder="First Name*" required />
-                          <input type="text" placeholder="Last Name*" required />
-                          <input type="email" placeholder="Email*" required />
-                          <input type="tel" placeholder="Phone Number*" required />
-                          <input type="text" placeholder="Compnay Name*" required />
-                          <textarea placeholder="Message*" required ></textarea>
-                          <input type="submit" value="SEND" />
+                      <form aria-live="polite" data-ux="Form" class="contactForm" onsubmit="return false;">
+                          <input type="text" placeholder="First Name*" name="first"  />
+                          <input type="text" placeholder="Last Name*" name="last" />
+                          <input type="text" placeholder="Email*" name="email"  />
+                          <input type="tel" placeholder="Phone Number*" name="phone"  />
+                          <input type="text" placeholder="Company Name*" name="company"  />
+                          <textarea placeholder="Message" name="message" ></textarea>
+                          <input type="submit" value="SEND" onclick="sendMail()" />
                           <p>
                             This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.
                           </p>
