--- a/contact-us.html
+++ b/contact-us.html
@@ -34,7 +34,7 @@
                     <a href="#menu" class="menu-link">&#9776;</a>
                     <nav id="menu" class="panel" role="navigation">
                         <div class="site-identity">
-                            <img src="assets/images/logo.png" />
+                            <a href="index.html"><img src="assets/images/logo.png" />
                         </div>
                         <ul>
                             <li><a href="index.html">Home</a></li>
