--- a/footer.html
+++ b/footer.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
-            <a href="#"><img src="assets/images/Footer/startupindia.png" style="border: none;" /></a>
+            <a href="https://www.startupindia.gov.in/content/sih/en/profile.Startup.5f15466fe4b08a4759a624d0.html"><img src="assets/images/Footer/startupindia.png" style="border: none;"/> </a>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
             <a href="#"><img src="assets/images/istore.png" /></a>
