[CodeFactor] Apply fixes

--- a/fleet.html
+++ b/fleet.html
@@ -199,7 +199,7 @@
     </div>
 
     <div class="solutions btmc">
-        <div class="container" style="padding: 0 0 40px 0">
+        <div class="container" style="padding: 0 0 40px">
             <h3>Ready to electrify your fleet?</h3>
 
             <div class="btns">
