contact form corrected

--- a/footer.html
+++ b/footer.html
@@ -31,7 +31,7 @@
 
     <div class="credit">
         <div class="cc col-md-4 col-sm-4 col-xs-12">
-            Copyright © 2021 Rimone - All Rights Reserved.
+            Copyright © 2021 Rimone IPL - All Rights Reserved.
         </div>
         <div class="terms col-md-4 col-sm-4 col-xs-12">
             <a href="#">Terms of Services</a> | <a href="assets/docs/RimonePrivacyPolicy.pdf">Privacy Policy</a>
