--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Richarge with Rimone - Electric Vehicle Charging Stations | RIMONE</title>
-    <meta name="description" content="TESTING"/>
-    <meta name="keywords" content="Testing">
-	<meta name="author" content="Testing"/>
+    <meta name="description" content=""/>
+    <meta name="keywords" content="">
+	<meta name="author" content=""/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
