--- a/footer.html
+++ b/footer.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
-            <a href="https://www.startupindia.gov.in/content/sih/en/profile.Startup.5f15466fe4b08a4759a624d0.html"><img src="assets/images/Footer/startupindia.png" style="border: none;"/> </a>
+            <a href=""><img src="assets/images/Footer/startupindia.png" style="border: none;"/> </a>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
             <a href="#"><img src="assets/images/istore.png" /></a>
@@ -34,7 +34,7 @@
             Copyright © 2021 Rimone IPL - All Rights Reserved.
         </div>
         <div class="terms col-md-4 col-sm-4 col-xs-12">
-            <a href="#">Terms of Services</a> | <a href="assets/docs/RimonePrivacyPolicy.pdf">Privacy Policy</a>
+            <a href="">Terms of Services</a> | <a href="">Privacy Policy</a>
         </div>
         <div class="social col-md-4 col-sm-4 col-xs-12">
             <a href=""><i class="fa fa-fw fa-facebook"></i></a>
