--- a/footer.html
+++ b/footer.html
@@ -38,7 +38,7 @@
         </div>
         <div class="social col-md-4 col-sm-4 col-xs-12">
             <a href=""><i class="fa fa-fw fa-facebook"></i></a>
-            <a href=""><i class="fa fa-fw fa-instagram"></i></a>
+            <a href="https://www.instagram.com/rimonecharge/"><i class="fa fa-fw fa-instagram"></i></a>
             <a href=""><i class="fa fa-fw fa-twitter"></i></a>
         </div>
     </div>
