--- a/newsroom.html
+++ b/newsroom.html
@@ -12,6 +12,10 @@
 <link rel="stylesheet" type="text/css" href="backendcss/css/allfontawesome.min.css" />
 <link rel="stylesheet" type="text/css" href="backendcss/css/fontawesome.min.css" />
 
+<script src="assets/js/external.js"></script>
+<script src="assets/js/custom.js"></script>
+
+
 <title>Newsroom</title>
 </head>
 
