--- a/newsroom.html
+++ b/newsroom.html
@@ -12,10 +12,6 @@
 <link rel="stylesheet" type="text/css" href="backendcss/css/allfontawesome.min.css" />
 <link rel="stylesheet" type="text/css" href="backendcss/css/fontawesome.min.css" />
 
-<script src="assets/js/external.js"></script>
-<script src="assets/js/custom.js"></script>
-
-
 <title>Newsroom</title>
 </head>
 
@@ -246,7 +242,7 @@
 	
 	</div>
 	</div>	
-	
+	<div id="footer"></div>
 	
 	
 	
@@ -255,6 +251,12 @@
 <script type="text/javascript" src="backendjs/jquery/jqry_form.js"></script>	
 <script type="text/javascript" src="backendjs/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="backendjs/js/codecustomjs.js"></script>
-<div id="footer"></div>
+
+
+<script src="assets/css/owl.carousel.min.css"></script>
+<script src="assets/js/external.js"></script>
+<script src="assets/js/custom.js"></script>
+
+
 </body>
 </html>
