--- a/newsroom.html
+++ b/newsroom.html
@@ -16,9 +16,44 @@
 </head>
 
 <body>
-	
+<header>
+        <div class="header-innerwrapper">
+            <div class="logo col-md-4  col-sm-4 col-xs-2">
+                <a href="index.html"><img src="assets/images/logo.png" />
+            </div>
+      
+            <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
+                <div class="nav-wrapper">
+                    <a href="#menu" class="menu-link">&#9776;</a>
+                    <nav id="menu" class="panel" role="navigation">
+                        <div class="site-identity">
+                            <a href="index.html"><img src="assets/images/logo.png" />
+                        </div>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="solution.html">Solution</a></li>
+                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact-us.html">Contact Us</a></li>
+                        </ul>
 
-	
+                        <div class="appsd"  style="text-align: center">
+                            <a href="#"><img src="assets/images/istore.png" /></a>
+                            <a href="#"><img src="assets/images/gstore.png" /></a>
+                        </div>
+                    </nav>
+
+                    <ul id="bmenu">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="solution.html">Solution</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>	
 	
 	<div id="carouselExampleDark" class="carousel carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
