--- a/footer.html
+++ b/footer.html
@@ -13,11 +13,11 @@
             <h5>Company</h5>
             <ul class="footer-list">
                 <li><a href="business.html">Public Charging</a></li>
-                <li><a href="business.html">Commercial Charging</a></li>
                 <li><a href="fleet.html">Fleet Charging</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="contact-us.html">Contact us</a></li>
-                <li><a href="faqs.html">FAQ's</a></li>
+                <li><a href="newsroom.html">Newsroom</a></li>
+				<li><a href="faqs.html">FAQ's</a></li>
             </ul>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
