--- a/newsroom.html
+++ b/newsroom.html
@@ -12,6 +12,19 @@
 <link rel="stylesheet" type="text/css" href="backendcss/css/allfontawesome.min.css" />
 <link rel="stylesheet" type="text/css" href="backendcss/css/fontawesome.min.css" />
 
+
+
+<link rel="stylesheet" type="text/css" href="assets/css/default.css">
+<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="assets/css/owl.css">
+<link rel="stylesheet"  type="text/css" href="assets/css/mycustom.css">
+<link rel="stylesheet" type="text/css" href="#">
+<link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+
+
+
+
 <title>Newsroom</title>
 </head>
 
