--- a/newsroom.html
+++ b/newsroom.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" type="text/css" href="backendcss/css/allfontawesome.min.css" />
 <link rel="stylesheet" type="text/css" href="backendcss/css/fontawesome.min.css" />
 
-
+<!-- added from the last -->
 
 <link rel="stylesheet" type="text/css" href="assets/css/default.css">
 <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
@@ -23,13 +23,13 @@
 
 
 
-
-
 <title>Newsroom</title>
 </head>
 
 <body>
-<header>
+	
+	
+	<header>
         <div class="header-innerwrapper">
             <div class="logo col-md-4  col-sm-4 col-xs-2">
                 <a href="index.html"><img src="assets/images/logo.png" />
@@ -67,7 +67,11 @@
             </div>
         </div>
     </header>	
+
 	
+	
+	
+
 	<div id="carouselExampleDark" class="carousel carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -144,66 +148,102 @@
 	<hr/>
 		</div>
 		
+		
 		<div class="row">
 		<div class="col-md-4">
 			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail  border-0" alt="newsrow1"/>
 			</div>
-			<div class="col-md-8 border-1">
-			<p class="newsroom-tittle-date">February 08, 2022</p>
-			<h2 class="newsroom-title-heading">Newsflash - Charging in America: Cold Weather Charging</h2>
-			<p class="newsroom-tittle-description">For those who drive an electric vehicle (EV) or are considering switching to one – and let’s face it, the future is headed in the direction of electric mobility -- a common question is how cold weather affects charging and mileage range of the vehicle.</p>
-				<div class="text-start newsroom-title-description-readmore"><a href="#"> &#62; READ MORE</a></div>
-			
+			<div class="col-md-8">
+			<p class="newsroom-tittle-date">February 19, 2022</p>
+			<h4 class="newsroom-title-heading">Convenient, Reliable & Affordable</h4>
+			<p class="newsroom-title-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 			</div>
+			<hr/>
 		</div>
-		<hr />
+				
 		
-			<div class="row">
+		<div class="row">
 		<div class="col-md-4">
-			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail border-0" alt="newsrow1"/>
+			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail  border-0" alt="newsrow1"/>
 			</div>
 			<div class="col-md-8">
-			<p class="newsroom-tittle-date">February 08, 2022</p>
-			<h2 class="newsroom-title-heading">Newsflash - Charging in America: Cold Weather Charging</h2>
-			<p class="newsroom-tittle-description">For those who drive an electric vehicle (EV) or are considering switching to one – and let’s face it, the future is headed in the direction of electric mobility -- a common question is how cold weather affects charging and mileage range of the vehicle.</p>
-				<div class="col-md-6 text-start newsroom-title-description-readmore"><a href="#"> &#62; READ MORE</a></div>
-			
+			<p class="newsroom-tittle-date">February 18, 2022</p>
+			<h4 class="newsroom-title-heading">Convenient, Reliable & Affordable</h4>
+			<p class="newsroom-title-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 			</div>
+			<hr/>
 		</div>
-		<hr />
 		
-			<div class="row">
+		
+		
+		<div class="row">
 		<div class="col-md-4">
-			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail border-0" alt="newsrow1"/>
+			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail  border-0" alt="newsrow1"/>
 			</div>
 			<div class="col-md-8">
-			<p class="newsroom-tittle-date">February 08, 2022</p>
-			<h2 class="newsroom-title-heading">Newsflash - Charging in America: Cold Weather Charging</h2>
-			<p class="newsroom-tittle-description">For those who drive an electric vehicle (EV) or are considering switching to one – and let’s face it, the future is headed in the direction of electric mobility -- a common question is how cold weather affects charging and mileage range of the vehicle.</p>
-				<div class="col-md-6 text-start newsroom-title-description-readmore"><a href="#"> &#62; READ MORE</a></div>
-			
+			<p class="newsroom-tittle-date">February 17, 2022</p>
+			<h4 class="newsroom-title-heading">Convenient, Reliable & Affordable</h4>
+			<p class="newsroom-title-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 			</div>
+			<hr/>
 		</div>
-		<hr />
-		
-			<div class="row">
+				
+		<div class="row">
 		<div class="col-md-4">
-		<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail border-0" alt="newsrow1"/>
+			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail  border-0" alt="newsrow1"/>
 			</div>
 			<div class="col-md-8">
-			<p class="newsroom-tittle-date">February 08, 2022</p>
-			<h2 class="newsroom-title-heading">Newsflash - Charging in America: Cold Weather Charging</h2>
-			<p class="newsroom-tittle-description">For those who drive an electric vehicle (EV) or are considering switching to one – and let’s face it, the future is headed in the direction of electric mobility -- a common question is how cold weather affects charging and mileage range of the vehicle.</p>
-				<div class="col-md-6 text-start newsroom-title-description-readmore"><a href="#"> &#62; READ MORE</a></div>
-			
+			<p class="newsroom-tittle-date">February 16, 2022</p>
+			<h4 class="newsroom-title-heading">Convenient, Reliable & Affordable</h4>
+			<p class="newsroom-title-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 			</div>
+			<hr/>
 		</div>
+		
+		<div class="row">
+		<div class="col-md-4">
+			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail  border-0" alt="newsrow1"/>
+			</div>
+			<div class="col-md-8">
+			<p class="newsroom-tittle-date">February 15, 2022</p>
+			<h4 class="newsroom-title-heading">Convenient, Reliable & Affordable</h4>
+			<p class="newsroom-title-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+			</div>
+			<hr/>
+		</div>
+		
+		
+		<div class="row">
+		<div class="col-md-4">
+			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail  border-0" alt="newsrow1"/>
+			</div>
+			<div class="col-md-8">
+			<p class="newsroom-tittle-date">January 12, 2022</p>
+			<h4 class="newsroom-title-heading">Convenient, Reliable & Affordable</h4>
+			<p class="newsroom-title-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+			</div>
+			<hr/>
+		</div>
+		
+		
+		<div class="row">
+		<div class="col-md-4">
+			<img src="content/stock/newsrow1.png" class="img-thumbnail newsroom-imgthumnail  border-0" alt="newsrow1"/>
+			</div>
+			<div class="col-md-8">
+			<p class="newsroom-tittle-date">January 08, 2022</p>
+			<h4 class="newsroom-title-heading">Convenient, Reliable & Affordable</h4>
+			<p class="newsroom-title-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+			</div>
+			<hr/>
+		</div>
+		
 		
 		</div>
 	
 	
 	<div class="container images-gallery-title">
-	<div class="row py-4 mt-4">
+	<div class="row py-4 mt-5">
 	<div class="col-md-6"><h4>Images</h4></div>
 	<div class="col-md-6 text-end"><a href="#"> &#62; VIEW ALL</a></div>
 	<hr/>
@@ -304,6 +344,8 @@
 <script src="assets/css/owl.carousel.min.css"></script>
 <script src="assets/js/external.js"></script>
 <script src="assets/js/custom.js"></script>
+
+
 
 
 </body>
