--- a/best-ways-to-charge.html
+++ b/best-ways-to-charge.html
@@ -11,7 +11,7 @@
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Rimone EV charging network</title>
+    <title>How to Richarge with Rimone</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
