--- a/charging-basics-1.html
+++ b/charging-basics-1.html
@@ -11,7 +11,7 @@
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Rimone EV charging network</title>
+    <title>EV Charging Basics</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
@@ -63,7 +63,7 @@
     <h3>EV CHARGING BASICS</h3>
     <p class="pinfo">
         <strong>
-            Curious about EV, we will answer all your questions related to electric vehicles. We’ll start from the basics — What is an electric vehicle? — to the nuts and bolts of variables that affect your charging speeds. Scroll at your leisure! And feed your curiosity.
+            Curious about EV, we will answer all your questions related to electric vehicles. We’ll start from the basics, What is an electric vehicle? to the nuts and bolts of variables that affect your charging speeds. Scroll at your leisure! And feed your curiosity.
         </strong>
     </p>
 
@@ -78,7 +78,7 @@
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Charging</h4>
                     <p class="hinfo">
-                        Charging your EV is just like… charging your phone. Yes! Just like how people have different habits for charging their phones, EV drivers have different habits for charging their vehicles. Some people charge their phones at night while they sleep. Some charge at work at their desk. And others take advantage of chargers everywhere – in their car, at home, at the airport — wherever they can. So, the good news is that there are several options for how to charge your EV, just like there are for charging your phone.
+                        Charging your EV is just like… charging your mobile phone. Yes! Just like how people have different habits for charging their phones, EV drivers have different habits for charging their vehicles. Some people charge their phones at night while they sleep. Some charge at work at their desk. And others take advantage of chargers everywhere they go like in their car, at home, at the airport etc. wherever they can. Similarly there are several options for how to charge your EV, just like there are for charging your phone.
                     </p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Time to Charge</h4>
                     <p class="hinfo">
-                        Currently, EV charging from zero percent to full takes time as compared to refilling petrol/diesel in the car. However, as the EV market is in the early stage, most people charge with EVs at home or place of work, saving a lot of time. But when in future EV market expands RIMONE has a plan of installing fast chargers too, which can charge your EV within few minutes.
+                        Currently, EV charging from zero percent to full takes time as compared to refilling petrol/diesel in the car. However, as the EV market is in the early stage, most people charge with EVs at home or place of work, saving a lot of time. As EV market is expanding, RIMONE has a plan of installing fast chargers too, which can charge your EV within few minutes.
                     </p>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
@@ -111,7 +111,7 @@
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Pricing</h4>
                     <p class="hinfo">
-                        Driving an electric vehicle will costs you less money than driving an ICE vehicle ( around 35% less). Fuel prices are not fixed and vary according to the market, whereas charging depends upon electricity which will be going to be cheaper with a renewable source of generation. The maintenance cost of EV's is very less as there are very few mechanical parts in the EV as compared to ICE vehicles. As the electric vehicle market is evolving simultaneously, reforms are being performed to make charging faster and economical.
+                        Driving an electric vehicle will costs you less money than driving an ICE vehicle. Fuel prices are not fixed and vary according to the market, whereas charging depends upon electricity which will be going to be cheaper with a renewable source of generation. The maintenance cost of EV's is very less as there are very few mechanical parts in the EV as compared to ICE vehicles. As the electric vehicle market is evolving simultaneously, reforms are being performed to make charging faster and economical.
                     </p>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
