--- a/footer.html
+++ b/footer.html
@@ -13,11 +13,11 @@
             <h5>Company</h5>
             <ul class="footer-list">
                 <li><a href="business.html">Public Charging</a></li>
+                <li><a href="business.html">Commercial Charging</a></li>
                 <li><a href="fleet.html">Fleet Charging</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="contact-us.html">Contact us</a></li>
-                <li><a href="newsroom.html">Newsroom</a></li>
-				<li><a href="faqs.html">FAQ's</a></li>
+                <li><a href="faqs.html">FAQ's</a></li>
             </ul>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
@@ -31,14 +31,14 @@
 
     <div class="credit">
         <div class="cc col-md-4 col-sm-4 col-xs-12">
-            Copyright © 2021 Rimone IPL - All Rights Reserved.
+            Copyright © 2022 Rimone IPL - All Rights Reserved.
         </div>
         <div class="terms col-md-4 col-sm-4 col-xs-12">
             <a href="">Terms of Services</a> | <a href="">Privacy Policy</a>
         </div>
         <div class="social col-md-4 col-sm-4 col-xs-12">
             <a href=""><i class="fa fa-fw fa-facebook"></i></a>
-            <a href="https://www.instagram.com/rimonecharge"><i class="fa fa-fw fa-instagram"></i></a>
+            <a href="https://www.instagram.com/rimonecharge/"><i class="fa fa-fw fa-instagram"></i></a>
             <a href=""><i class="fa fa-fw fa-twitter"></i></a>
         </div>
     </div>
