--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Richarge with Rimone - Electric Vehicle Charging Stations | RIMONE</title>
-    <meta name="description" content=""/>
-    <meta name="keywords" content="">
-	<meta name="author" content=""/>
+    <title>Richarge with Rimone</title>
+    <meta name="description" content=" "/>
+    <meta name="keywords" content="   ">
+	<meta name="author" content="  "/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
