--- a/newsroom.html
+++ b/newsroom.html
@@ -77,7 +77,8 @@
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-	  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+	 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+	 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
 	 
 	 
   </div>
@@ -103,6 +104,19 @@
 		
     <div class="carousel-item">
       <img src="content/slider/slider3.jpg" class="d-block w-100" alt="...">
+       <div class="carousel-content">
+		 <div class="row carousel-content-row py-2" style="opacity: 0.7">
+			<div class="col-md-6 bg-primary">
+        <h4>Electrify America Earns "Best-in-Test" Electric Vehicle Charging Award for Second Year in a Row</h4>
+        <p>Electrify America has earned the “EV Charging Infrastructure Best-in-Test” award for the second year in a row, according to infrastructure and benchmarking specialist umlaut, now part of Accenture, and Charged Electric Vehicles Magazine.</p>
+    	<button class="btn btn-info text-center text-light mt-2">Read More</button>
+	</div>
+    </div>
+	</div>
+    </div>
+	
+	  <div class="carousel-item">
+      <img src="content/slider/slider10.jpg" class="d-block w-100" alt="...">
        <div class="carousel-content">
 		 <div class="row carousel-content-row py-2" style="opacity: 0.7">
 			<div class="col-md-6 bg-primary">
