--- a/business.html
+++ b/business.html
@@ -85,7 +85,7 @@
         </div>
         <div class="pinfo">
             <p>
-                RIMONE is India's best and most reliable public charging network for electric vehicles. With our aim to set up 100 charging stations in the coming future at various locations in metropolitan areas. RIMONE owns and operates its nationwide network of chargers, which are compatible with all EV models. Founded in 2020, RIMONE partners with retail hosts, hotels, shopping centres, gas stations, parking lot operators, and other stakeholders to make it easier to charge your EV close to where you live, work and play. We are also committed to providing a reliable charging experience for customers as well as fleet and rideshare operators.
+                RIMONE is India's best and most reliable public charging network for electric vehicles. With our aim to set up hundreds of charging stations in the coming few years at various locations in metropolitan areas. RIMONE owns and operates its nationwide network of chargers, which are compatible with all EV models. Founded in 2020, RIMONE partners with retail hosts, hotels, shopping centres, gas stations, parking lot operators, and other stakeholders to make it easier to charge your EV close to where you live, work and play. We are also committed to providing a reliable charging experience for customers as well as fleet and rideshare operators.
             </p>
         </div>
     </div>
