--- a/about.html
+++ b/about.html
@@ -156,6 +156,37 @@
      </div>
     </div>
    </div>
+   
+   <div class="service">
+            <div class="container">
+                <h3>RICHARGE WITH RIMONE</h3>
+                <hr>
+                <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
+                    <span>Home Charge</span>
+                    <img src="assets/images/Home/rich1.png" />
+                    <p class="sinfo">
+                        Now users can easily charge their EV at home with rimone and monitor their electric vehicle's past sessions and performance.
+                    </p>               
+                </div>
+                <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
+                    <span>Public Charging</span>
+                    <img src="assets/images/Home/rich2.png" />
+                    <p class="sinfo">
+                        EV charging is an effective way to attract, retain and engage employees. Fleet electrification will lead to lower TCO and higher revenue.
+                    </p>
+                    <div class="btns">
+                        <a href="assets\docs\rimoneemobility.pdf">Download our brochure</a>
+                    </div>
+                </div>
+                <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
+                    <span>Corporate/Fleet</span>
+                    <img src="assets/images/Home/rich3.png" />
+                    <p class="sinfo">
+                        Travelling in your EV, worrying about the next charge. Well rimone got you covered. Now you can charge your EV with our fast-charging network.
+                    </p>
+                </div>
+            </div>
+        </div>
 
          <div class="ahero">
             <div class="container">
