Font size change

--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
    
    <div class="service">
             <div class="container">
-                <h3>RICHARGE WITH RIMONE</h3>
+                <h3>Sloutions to Meet Your Charging Needs</h3>
                 <hr>
                 <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                     <span>Home Charge</span>
@@ -175,7 +175,7 @@
                         EV charging is an effective way to attract, retain and engage employees. Fleet electrification will lead to lower TCO and higher revenue.
                     </p>
                     <div class="btns">
-                        <a href="assets\docs\rimoneemobility.pdf">Download our brochure</a>
+                        <a href="assets\docs\rimoneemobility.pdf">Download Brochure</a>
                     </div>
                 </div>
                 <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
