startuppunjab logo added

--- a/footer.html
+++ b/footer.html
@@ -22,6 +22,7 @@
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
             <a href=""><img src="assets/images/Footer/startupindia.png" style="border: none;"/> </a>
+			<a href=""><img src="assets/images/Footer/startuppunjab.png" style="border: none;"/> </a>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
             <a href="#"><img src="assets/images/istore.png" /></a>
