--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="#">
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Favicon tab logo code -->
+	<link rel= "icon" href= "assets/images/Footer/logo.png">
+	
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>About Rimone</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -159,7 +162,7 @@
    
    <div class="service">
             <div class="container">
-                <h3>Sloutions to Meet Your Charging Needs</h3>
+                <h3>Dedicated Sloutions for Your Charging Needs</h3>
                 <hr>
                 <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                     <span>Home Charge</span>
