--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="#">
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Favicon tab logo code -->
+	<link rel= "icon" href= "assets/images/Footer/logo.png">
+	
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Richarge with Rimone - Electric Vehicle Charging Stations | RIMONE</title>
     <meta name="description" content="Rimone is a network of EV charging stations deployed at carefully chosen locations so that people can easily charge their EV while doing their daily errands. Our aim is to make EV charging Convenient, Reliable & Affordable for you. "/>
