--- a/pricing.html
+++ b/pricing.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" type="text/css" href="#">
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+	<!-- Favicon tab logo code -->
+	<link rel= "icon" href= "assets/images/Footer/logo.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Rimone EV charging network</title>
+    <title>EV Charging Pricing</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
