--- a/type-of-evs.html
+++ b/type-of-evs.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="#">
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+	<!-- Favicon tab logo code -->
+	<link rel= "icon" href= "assets/images/Footer/logo.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>EV's in the Market</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
