--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         Now users can easily charge their EV at home with rimone and monitor their electric vehicle's past sessions and performance.
                     </p>
                     <div class="btns">
-                        <a href="personal.html">INDIVIDUAL</a>
+                        <a href="personal.html">PERSONAL</a>
                     </div>
                 </div>
                 <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
