--- a/contact-us.html
+++ b/contact-us.html
@@ -97,7 +97,7 @@
                         You can also directly reach out to us at
                     </p>
 					<p>
-                       Email - rimonecharge@gmail.com
+                       Email - info@rimonecharge.com
                     </p>
 					<p>
                        Ph. +91-7696012280
